# internat-management

./: README.md
.github/workflows/: server-test.yml
client/: .env.example  README.md  pubspec.yaml
client/android/app/: build.gradle
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  router.dart  theme.dart
client/lib/blocs/chat/: chat_bloc.dart  chat_event.dart  chat_state.dart
client/lib/models/: chat.dart  errors.dart  navigation_option.dart  shared_prefs.dart  theme.dart  user.dart
client/lib/shared/: conversation_app_bar.dart  default_app_bar.dart  navbar.dart  scaffold_with_bottom_navbar.dart  scaffold_with_bottom_supervisor_navbar.dart  scaffold_with_navbar.dart
client/lib/utils/: convert_to_utf_8.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: .env.example  Cargo.toml  README.md  docker-compose.yml
server/db_docker/: Dockerfile  init.sh  schema.sql  seed.sql
server/docs/: auth.md  catering.md  chat.md  cleaning.md  news.md  room.md
server/src/: README.md  env.rs  error.rs  main.rs
server/src/docs/: chat.md
server/src/routes/: chat.rs  mod.rs  routes.md
server/src/routes/chat/: crud.rs  mod.rs  types.rs  ws.rs
server/src/routes/rating/: catering_rating.rs  mod.rs  rating.rs
server/src/routes/rating/catering/: delete.rs  get.rs  mod.rs  post.rs
server/src/routes/ratings/: mod.rs  types.rs
server/src/routes/ratings/catering/: delete.rs  get.rs  mod.rs  post.rs
server/src/routes/ratings/meals/: delete.rs  get.rs  post.rs
server/src/routes/user/: auth.rs  change_location.rs  info.rs  mod.rs
server/src/utils/: kafka.rs  mod.rs  request_types.rs  tests.rs  web_sockets.rs
(+20 files in other folders)
