[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres" ] }
anyhow = "1.0.81"
dotenv = "0.15.0"
argon2 = "0.6.0-pre.0"
rand = "0.8.5"
