[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
axum-test = "14.6.0"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres" ] }
anyhow = "1.0.81"
dotenv = "0.15.0"
argon2 = "0.6.0-pre.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
