[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["ws"] }
axum-core = "0.4.3"
axum-test = "14.6.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
rdkafka = "0.36.2"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "time"] }
anyhow = "1.0.81"
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
headers = "0.4.0"
lazy_static = "1.4.0"
